--- a/button.css
+++ b/button.css
@@ -11,3 +11,28 @@ button.current {
   box-shadow: 0 0 0 2px white,
               0 0 0 4px black;
 }
+
+
+.plugin-container {
+  width: 200px;
+  padding: 8px 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+* {
+  color: #2d2d2d;
+  background: #f9f9ff;
+}
+
+.tooltip-button {
+  color: #2d2d2d;
+  text-align: center;
+  font-size: 12px;
+  width: 100%;
+  border: solid 1px;
+  background-color: unset;
+  padding: 0;
+  margin: 0;
+}
