--- a/button.css
+++ b/button.css
@@ -19,6 +19,8 @@ button.current {
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 * {
@@ -30,9 +32,10 @@ button.current {
   color: #2d2d2d;
   text-align: center;
   font-size: 12px;
-  width: 100%;
   border: solid 1px;
   background-color: unset;
-  padding: 0;
+  width: 130px;
+  height: 20px;
+  border-radius: 16px;
   margin: 0;
 }
