--- a/css/acronym-plugin-tooltip.css
+++ b/css/acronym-plugin-tooltip.css
@@ -1,21 +1,26 @@
 .tooltip {
     position: relative;
     display: inline-block;
+    background-color: #007bc129;
     border-bottom: 1px dotted black;
+    overflow: visible;
 }
 
 .tooltip .tooltiptext {
+    font-size: 14px;
     visibility: hidden;
-    width: 120px;
-    background-color: black;
+    min-width: 120px;
+    max-width: 240px;
+    background-color: #2b2b2b;
     color: #fff;
     text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
+    border-radius: 4px;
+    padding: 4px 8px;
 
     /* Position the tooltip */
+
+    z-index: 9999;
     position: absolute;
-    z-index: 1;
 }
 
 .tooltip:hover .tooltiptext {
