--- a/src/styles/switch.css
+++ b/src/styles/switch.css
@@ -7,15 +7,6 @@ This code is licensed under the BSD-3 license found in the LICENSE file in the r
 **/
 /* Primary Colors / User Interface Colors */
 /* Status Colors */
-/**
-Copyright (c) 2021-present, Eaton
-
-All rights reserved.
-
-This code is licensed under the BSD-3 license found in the LICENSE file in the root directory of this source tree and at https://opensource.org/licenses/BSD-3-Clause.
-**/
-/* Primary Colors / User Interface Colors */
-/* Status Colors */
 .eaton-acronym-plugin-container .cl-switch {
   /*
   Switcher Style
@@ -128,111 +119,4 @@ This code is licensed under the BSD-3 license found in the LICENSE file in the r
   margin-left: -50px;
 }
 
-.eaton-acronym-plugin-container {
-  font-family: "Gill Sans", sans-serif;
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 8px 8px;
-  box-sizing: border-box;
-}
-.eaton-acronym-plugin-container * {
-  box-sizing: border-box;
-}
-.eaton-acronym-plugin-container #acronymSearchInput {
-  width: 100%;
-  height: 36px;
-  border-radius: 18px;
-  padding: 0 16px;
-  box-shadow: inset 0px 0px 0px 0px #d5d8da;
-  border: solid 1px #d5d8da;
-  font-style: italic;
-  color: #9ca5a9;
-}
-.eaton-acronym-plugin-container #acronymSearchInput:focus-visible {
-  outline: none !important;
-  border: solid 2px #007bc1 !important;
-}
-.eaton-acronym-plugin-container .toggle-container {
-  margin-top: 24px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 16px;
-}
-.eaton-acronym-plugin-container .switch {
-  display: inline-block;
-  height: 34px;
-  position: relative;
-  width: 60px;
-}
-.eaton-acronym-plugin-container .switch input {
-  display: none;
-}
-.eaton-acronym-plugin-container .slider {
-  background-color: #ccc;
-  bottom: 0;
-  cursor: pointer;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transition: 0.4s;
-}
-.eaton-acronym-plugin-container .slider:before {
-  background-color: #fff;
-  bottom: 4px;
-  content: "";
-  height: 26px;
-  left: 4px;
-  position: absolute;
-  transition: 0.4s;
-  width: 26px;
-}
-.eaton-acronym-plugin-container input:checked + .slider {
-  background-color: #66bb6a;
-}
-.eaton-acronym-plugin-container input:checked + .slider:before {
-  transform: translateX(26px);
-}
-.eaton-acronym-plugin-container .slider.round {
-  border-radius: 34px;
-}
-.eaton-acronym-plugin-container .slider.round:before {
-  border-radius: 50%;
-}
-.eaton-acronym-plugin-container #login {
-  color: #007bc1;
-  text-decoration: underline;
-  cursor: pointer;
-}
-.eaton-acronym-plugin-container #userContentContainer {
-  display: none;
-}
-.eaton-acronym-plugin-container button {
-  height: 30px;
-  width: 30px;
-  outline: none;
-  margin: 10px;
-  border: none;
-  border-radius: 2px;
-  background: red;
-}
-.eaton-acronym-plugin-container button.current {
-  box-shadow: 0 0 0 2px white, 0 0 0 4px black;
-}
-.eaton-acronym-plugin-container .tooltip-button {
-  color: #2d2d2d;
-  text-align: center;
-  font-size: 12px;
-  border: solid 1px;
-  background-color: unset;
-  width: 130px;
-  height: 20px;
-  border-radius: 16px;
-  margin: 0;
-}
-
-/*# sourceMappingURL=plugin.css.map */
+/*# sourceMappingURL=switch.css.map */
