--- a/src/styles/plugin.css
+++ b/src/styles/plugin.css
@@ -210,29 +210,34 @@ This code is licensed under the BSD-3 license found in the LICENSE file in the r
 }
 .eaton-acronym-plugin-container #userContentContainer {
   display: none;
+  width: 100%;
 }
-.eaton-acronym-plugin-container button {
-  height: 30px;
-  width: 30px;
-  outline: none;
-  margin: 10px;
+.eaton-acronym-plugin-container #userContentContainer .eaton-glossary-button {
+  width: 100%;
+  color: #ffffff;
+  background-color: #007bc1;
+  border-radius: 4px;
   border: none;
-  border-radius: 2px;
-  background: red;
+  height: 36px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
-.eaton-acronym-plugin-container button.current {
-  box-shadow: 0 0 0 2px white, 0 0 0 4px black;
+.eaton-acronym-plugin-container #userContentContainer .user-email {
+  font-weight: 600;
+  font-size: 14px;
 }
-.eaton-acronym-plugin-container .tooltip-button {
-  color: #2d2d2d;
-  text-align: center;
-  font-size: 12px;
-  border: solid 1px;
-  background-color: unset;
-  width: 130px;
-  height: 20px;
-  border-radius: 16px;
-  margin: 0;
+.eaton-acronym-plugin-container #userContentContainer .user-contributions {
+  cursor: pointer;
+  color: #007bc1;
+}
+.eaton-acronym-plugin-container #userContentContainer .logout {
+  cursor: pointer;
+  margin-left: 16px;
+  color: #ca3c3d;
 }
 
 /*# sourceMappingURL=plugin.css.map */
