--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -96,31 +96,34 @@
 
     #userContentContainer {
         display: none;
-    }
+        width: 100%;
+        .eaton-glossary-button {
+            width: 100%;
+            color: map-get($blui-white, 50);
+            background-color: map-get($blui-blue, 500);
+            border-radius: 4px;
+            border: none;
+            height: 36px;
+            margin-top: 16px;
+            margin-bottom: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
 
-    button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-        margin: 10px;
-        border: none;
-        border-radius: 2px;
-        background: red;
-    }
-
-    button.current {
-        box-shadow: 0 0 0 2px white, 0 0 0 4px black;
-    }
-
-    .tooltip-button {
-        color: #2d2d2d;
-        text-align: center;
-        font-size: 12px;
-        border: solid 1px;
-        background-color: unset;
-        width: 130px;
-        height: 20px;
-        border-radius: 16px;
-        margin: 0;
+        .user-email {
+            font-weight: 600;
+            font-size: 14px;
+        }
+        .user-contributions {
+            cursor: pointer;
+            color: map-get($blui-blue, 500);
+        }
+        .logout {
+            cursor: pointer;
+            margin-left: 16px;
+            color: map-get($blui-red, 500);
+        }
     }
 }
