--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -28,7 +28,7 @@
         color: map-get($blui-gray, 300);
         &:focus-visible {
             outline: none !important;
-            border: solid 2px  map-get($blui-blue, 500)!important;
+            border: solid 2px map-get($blui-blue, 500) !important;
         }
     }
 
@@ -131,29 +131,48 @@
         width: 100%;
         display: none;
         padding-top: 16px;
-        #suggestYourOwn {
-            color: map-get($blui-blue, 500);
-            text-decoration: underline;
-            cursor: pointer;
-        }
         #noResultsFound {
             text-align: left;
             font-size: 16px;
         }
     }
 
+    #suggestYourOwn {
+        font-size: 16px;
+        color: map-get($blui-blue, 500);
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
     .searched-acronym-item {
         display: flex;
         width: 100%;
         justify-content: space-between;
-        color: map-get($blui-black, 500);
-        .small-icon {
-            color: map-get($blui-gray, 500);
-            font-size: 12px;
+        margin-bottom: 16px;
+        > div:first-child {
+            padding-right: 16px; /* Right content */
+        }
+        .acronym-meaning {
+            font-size: 16px;
+            color: map-get($blui-black, 500);
+            font-weight: 600;
+        }
+        .acronym-sector-region {
+            display: flex;
+            color: map-get($blui-black, 500);
+            font-size: 14px;
+            margin-top: 4px;
+            .small-icon {
+                font-size: 14px;
+                margin-right: 4px;
+                color: map-get($blui-gray, 500);
+            }
         }
         .large-icon {
+            cursor: pointer;
             color: map-get($blui-gray, 500);
             font-size: 20px;
         }
     }
+
 }
